--- a/style.css
+++ b/style.css
@@ -65,8 +65,8 @@ p {
 #headshot img {
 	width: 100%;
 	height: auto;
-	-webkit-border-radius: 50px;
-	border-radius: 50px;
+	-webkit-border-radius: 30px;
+	border-radius: 30px;
 }
 
 #name {
@@ -164,9 +164,9 @@ section:last-child {
 }
 
 .column {
-	float: right;
-	width: 25%;
-	padding: 5px;
+	float: left;
+	width: 30%;
+	padding: 3px;
 }	
 
 .row::after {
@@ -175,7 +175,7 @@ section:last-child {
 	display: table;	
 }
 
-@media all and (min-width: 602px) and (max-width: 800px) {
+@media all and (min-width: 600px) and (max-width: 800px) {
 	#headshot {
 		display: none;
 	}
